# python_pro_snake

./: .gitignore  Makefile  apple.py  constants.py  pyproject.toml  runner.py  snake.py  snake_collision.py  square.py  utils.py
.github/workflows/: pylint.yml
src/: apple.py  constants.py  runner.py  snake.py  snake_collision.py  square.py  utils.py
tests/: test_snake.py  test_snake_collision.py  test_utils.py
