[tool.poetry]
name = "python-pro-snake"
version = "0.1.0"
description = ""
authors = ["stas-home <stasijanka13@gmail.com>"]
readme = "README.md"
packages = [{include = "python_pro_snake"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pygame = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
