[tool.poetry]
name = "python-pro-snake"
version = "0.1.0"
description = ""
authors = ["stas-home <stasijanka13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pygame = "^2.5.0"
pytest-mock = "^3.11.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.3.0"
pylint = "^2.17.5"
black = "^23.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.pylint.messages_control]
max-line-length = 89
disable = [
    "import-error",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "no-member",
    "too-few-public-methods",
    "invalid-name",
    "too-many-branches",
    "global-statement",
    "global-variable-not-assigned",
    "too-many-instance-attributes"
]

[tool.pylint.design]
# limiting the number of returns might discourage
# the use of guard clauses. So we increase the
# allowed number of returns from 6 to 8
max-returns = 8

[tool.pylint.format]
max-module-lines = 1000